--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"token": "bot tokeni",
-    "guildId": "dc sunucu idniz",
-    "server_ip": "ip adresiniz",
-    "server_port": "port"
+	"token": "MTEyODM5MjIyMjY0NDEyMTczMQ.G4BKS6.A0YB9t3Y4bV24s4rvFPENxrndZBWJFX9vKsn7A",
+    "guildId": "1128279038063038555",
+    "server_ip": "181.214.223.210",
+    "server_port": "22003"
 }
